--- a/css/style.css
+++ b/css/style.css
@@ -1,93 +1,173 @@
 /* Estilos globales */
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: monospace;
 }
-
-body {
+body{
     min-height: 100vh;
+    min-width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: rgb(83, 200, 220);
 }
-
-/* Estilos del contenedor principal */
-.contenedor1 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-/* Estilos de la cuenta regresiva (izquierda) */
-#cuentaRegresiva {
-    /* Agrega estilos específicos para la cuenta regresiva si es necesario */
-}
-
-/* Estilos de los botones y elementos relacionados (derecha) */
-.botones {
-    display: flex;
-    
-    align-items: center;
-}
-
-.figuraOff {
-    width: 200px;
+.contenedor{
+    width: 500px;
     height: 200px;
+    width: auto;
+    background-color: #c4b18200;
     display: flex;
     align-items: center;
     justify-content: center;
+ }
+ .subContenedor{
+    display: flex;
+    flex-direction: column;
+    margin-left: 250px;
+ }
+ #mensaje{
+    font-family: Arial, Helvetica, sans-serif;
+    color: red;
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom:50px ;
+ }
+ .dia{
+    align-items: center;
+    justify-content: center;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 8px 0px #ffffff;
+    border: none;
+    padding: 10px 30px;
+    margin: 0 1%;
+    font-size: 30px;
+    color: aliceblue;
+ }
+ .hora{
+    align-items: center;
+    justify-content: center;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 8px 0px #ffffff;
+    border: none;
+    padding: 10px 30px;
+    margin: 0 1%;
+    font-size: 30px;
+    color: aliceblue;
+ }
+ .minuto{
+    align-items: center;
+    justify-content: center;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 8px 0px #ffffff;
+    border: none;
+    padding: 10px 30px;
+    margin: 0 1%;
+    font-size: 30px;
+    color: aliceblue;
+ }
+ .segundo{
+    align-items: center;
+    justify-content: center;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 8px 0px #ffffff;
+    border: none;
+    padding: 10px 30px;
+    margin: 0 1%;
+    font-size: 30px;
+    color: aliceblue;
+ }
+ .letra{
+    display: flex;
+    justify-content: space-around;
+ }
+ .n{
+    margin-top: 10PX;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 1000;
+    color: aliceblue;
+    height: 20px;
+    width: 20px;
+ }
+ .papaN{
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.botones{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 42px;
+}
+.botones button{
+    padding: 20px 16px;
+    width: 100px;
+    height: 50px;
+    outline: none;
+    border: none;
+    margin:  10px 2px;
+    color: #ffffff;
+    background: #fd0000;
+    border-radius: 50px;
+    cursor: pointer;
+    font-family:cursive;
+    font-size: 20px;
+}
+.botones button.act{
+    background-color: red;
+}
+.play, .pause{
+    width: 100px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    cursor: pointer;
+    font-family:cursive;
+    font-size: 20px;
+    margin: 20px;
+}
+.botones button.on{
+    pointer-events: none;
+    opacity: .7;
+}
+.noelOff{
+    width: 600px;
+    height: 550px;
+    display: flex;
+    align-items: end;
+    justify-content: center;
     background-image: url("../img/papaNoel1.png");
-    background-size: contain;
     background-repeat: no-repeat;
-    
-}
-
-.figuraOff.on {
-    background-image: url("../img/papaNoel.gif");
-}
-
-.botonOn,
-.botonOff {
-    width: 80px;
-    height: 40px;
-    background-color: rgb(255, 0, 0);
-    border-radius: 50vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-family: cursive;
-    
-}
-
-.botonOn.on {
+    }
+.noelOff.on{
     background-image: url("../img/papaNoel1.png");
 }
-
-.botonOn:hover,
-.botonOff:hover {
-    background-color: aqua;
+.noelOnOff{
+    width: 50px;
+    height: 50px;
+    background-color: rgb(253, 93, 0);
+    border-radius: 1vh;
+    border: .2rem solid rgb(224, 120, 59);
+    position: fixed;
+    color: antiquewhite;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-family: monospace;
+    cursor: pointer;
+}
+.noelOnOff:hover{
+    background-color: bisque;
     color: black;
 }
-
-.cuentaRegresiva {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Estilos para los elementos de la cuenta regresiva */
-.dias,
-.horas,
-.minutos,
-.segundos {
-    font-size: 30px;
-    width: 100px;
-    height: 60px;
-    border: 0.2rem solid white;
-    border-radius: 50vh;
+.reloj{
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
-    font-family: cursive;
 }
