--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ body{
     background-repeat: no-repeat;
     }
 .noelOff.on{
-    background-image: url("../img/papaNoel1.png");
+    background-image: url("../img/papaNoel.gif");
 }
 .noelOnOff{
     width: 50px;
